# hevo-app

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: API_INTEGRATION_GUIDE.md
scripts/: index_docs.py
src/hevo_assistant/: __init__.py  cli.py  config.py
src/hevo_assistant/agent/: __init__.py  actions.py  followups.py  intent.py  responses.py  validator.py
src/hevo_assistant/agents/: __init__.py  coordinator.py  executor.py  orchestrator.py  schemas.py
src/hevo_assistant/agents/prompts/: __init__.py  coordinator.py  executor.py
src/hevo_assistant/api/: __init__.py  client.py  destinations.py  models.py  pipelines.py
src/hevo_assistant/crawler/: __init__.py  api_crawler.py  docs_crawler.py  parser.py
src/hevo_assistant/domain/: __init__.py  capabilities.py  knowledge.py
src/hevo_assistant/llm/: __init__.py  anthropic_llm.py  base.py  ollama_llm.py  openai_llm.py
src/hevo_assistant/rag/: __init__.py  embeddings.py  pinecone_store.py  retriever.py  vectorstore.py
