[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hevo-assistant"
version = "0.2.0"
description = "Chat-to-Action CLI for Hevo Data pipelines with RAG-powered assistance"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Hevo App", email = "support@hevodata.com"}
]
keywords = ["hevo", "data-pipeline", "cli", "rag", "assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # CLI & UI
    "click>=8.0",
    "rich>=13.0",

    # RAG & Embeddings
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",

    # LLM Providers
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "ollama>=0.1.0",

    # HTTP & Parsing
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",

    # Data Validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
hevo = "hevo_assistant.cli:main"

[project.urls]
Homepage = "https://github.com/Legolasan/hevo-app"
Documentation = "https://docs.hevodata.com"
Repository = "https://github.com/Legolasan/hevo-app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hevo_assistant = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
